@@ -1,23 +1,23 @@
-<div ng-controller="TableListController">
+<div ng-controller="TableListController" class="side-bar table-side-bar" ng-show="renderSidebar">
 
-  <div class="side-bar table-side-bar" ng-show="renderSidebar">
-    <div>
-        <input id="tableFilter" ng-model="search.$" placeholder="Filter tables ..." type="text" focus="true"></input>
+    <div class="filter__wrapper">
+        <input id="tableFilter" ng-model="search.$" placeholder="Filter tables ..." type="text" focus="true">
         <a ng-if="search.$" class="cr-clear-filters" ng-click="search.$ = '' ">
-            <img src="images/icons/icon-search-delete.svg">
+            <i class="fa fa-times-circle" aria-hidden="true"></i>
         </a>
     </div>
 
+
     <div class="table-list-wrapper">
       <div class="table-group" ng-repeat="type in tables track by $index">
-        <div class="table-nav-tab-header" id="table-nav-tab-header-{{$index}}">
-          <a class="side-bar__header table-tab-header" href ng-click="toggleElements($index)">
+        <div class="table__tab__header" id="table-nav-tab-header-{{$index}}" ng-class="isCollapsed($index) ? '' : 'table__tab__tab-header--selected'">
+          <div class="side-bar__header table__tab__header" ng-click="toggleElements($index)">
             <i class="fa fa-caret-down" ng-class="{'fa-caret-down': !isCollapsed($index), 'fa-caret-right': isCollapsed($index)}"></i>
-            {{ type.display_name }} {{ 'TABLE.TITLE' | translate }}</a>
+            {{ type.display_name }} {{ 'TABLE.TITLE' | translate }}</div>
         </div>
 
         <div class="tables-list" id="tables-list--{{$index}}" ng-class="{'collapse': isCollapsed($index), 'in': !isCollapsed($index)}">
-          <div class="side-bar__element table-detail" ng-class="{ 'active': isActive(table.table_schema, table.name)}" ng-repeat="table in type.tables | filter:search track by $index">
+          <div class="side-bar__element tables-list__element" ng-class="{ 'active': isActive(table.table_schema, table.name)}" ng-repeat="table in type.tables | filter:search track by $index">
             <a href="#/tables/{{ table.table_schema }}/{{ table.name }}">
               <div class="table-name-row">
                 <div class="table-name">
@@ -37,5 +37,4 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
